kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversor-moeda-service
spec:
  selector:
    app: conversor-moeda-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
